# fambot

./: README.md
Chess/: BasicAI.cpp  BasicAI.h  Bishop.cpp  Bishop.h  CMakeLists.txt  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  MediumAi.cpp  Menu.cpp  Menu.h  Move.cpp  Move.h  Pawn.cpp  Pawn.h  Pieces.cpp  Pieces.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp  menu.cpp  menu.h
Chess/Chess/: Bishop.h  Game.cpp  Game.h  King.h  MediumAi.h  Pawn.cpp  Pawn.h  Pieces.h  Player.h  Queen.cpp  Rook.cpp  Rook.h
ChessAI/: Bishop.cpp  Bishop.h  CMakeLists.txt  Game.cpp  Game.h  Gamemenu.cpp  Gamemenu.h  King.cpp  King.h  Knight.cpp  Knight.h  MediumAi.cpp  MediumAi.h  Pawn.cpp  Pawn.h  Pieces.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
